--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ url: https://peninsula824.github.io/
 #  AUTHOR / PROFILE DATA
 # --------------------------------------------------
 owner:
-  name: Tianyao Tan
-  avatar: Tianyao_im.jpg
+  name: "Tianyao Tan"
+  avatar: "Tianyao_im.jpg"
   # bio: Dream big, stay positive, work hard, and enjoy the journey.
   email: ttanag@connect.ust.hk.uk
   cv: https://github.com/peninsula824/CV/blob/main/Tan%20Tianyao_CV.pdf
@@ -22,7 +22,7 @@ owner:
 
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   #twitter: lancecai2002
-  github: https://github.com/peninsula824
+  github: peninsula824
   #linkedin: hanlincai
   #scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
   #researchgate: https://www.researchgate.net/profile/Hanlin-Cai
