--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url: https://peninsula824.github.io/
 # --------------------------------------------------
 owner:
   name: "Tianyao Tan"
-  avatar: "Tianyao_im.jpg"
+  avatar: "/images/Tianyao_im.jpg"
   # bio: Dream big, stay positive, work hard, and enjoy the journey.
   email: ttanag@connect.ust.hk.uk
   cv: https://github.com/peninsula824/CV/blob/main/Tan%20Tianyao_CV.pdf
